@@ -1,3 +1,10 @@
+2009-09-17  Charles Wilson  <cwilso11@users.sourceforge.net>
+
+	Fixup msys-here-config.
+	* README: Update.
+	* setup/msys-here-config.in: Improve search algorithm
+	for msys-here executable. Better reporting on success.
+
 2009-09-14  Charles Wilson  <cwilso11@users.sourceforge.net>
 
 	Minor corrections to build machinery.
